# rad

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: CompilerFlags.cmake  rad-config.cmake.in
include/rad/: big_endian.h  bits.h  buffer.h  cli.h  cpu.h  dynamic_buffer.h  env.h  function_traits.h  function_view.h  libbase.h  match.h  os_handles_base.h  os_types.h  random.h  ring_buffer.h  ring_buffer_consumer.h  stack_allocator.h  stack_forward_list.h  stack_list.h  string.h  sysinfo.h  system_error.h  trackable.h  utf.h
include/rad/async/: async_event.h  async_phaser.h  async_wait_queue.h  checked_counter.h  executor.h  io_executor.h  io_loop.h  strand.h  timer.h  work_guard.h
include/rad/channels/: channel_common.h  mpsc_channel.h  oneshot_channel.h
include/rad/coro/: README.md  awaitable_traits.h  execute.h  execute_timeout.h  forked_task.h  scoped_wait.h  spawn.h  task.h  this_coro.h  when_all.h
include/rad/crypto/: aes.h  base64.h  error.h  padding.h  source_sink.h  wincrypt.h
include/rad/crypto/detail/: m128.h
include/rad/crypto/modes/: cbc.h  ctr.h  ecb.h  gcm.h
include/rad/databases/: README.md  odbc.h  sqlite.h
include/rad/detail/: dprint.h  posix_details.h  radconfig.h  radconfig.h.in  string_converter.h  windows_details.h
include/rad/io/: async_read_until.h  console.h  files.h  serial_port.h  unnamed_pipe.h
include/rad/io/bsd/: kqueue.h  kqueue_io_loop.h
include/rad/io/detail/: file_common.h  file_impl.h  serial_common.h
include/rad/io/detail/posix/: file_impl.h
include/rad/io/detail/windows/: file_impl.h
include/rad/io/linux/: async_waitable_timer.h  console_impl.h  epoll.h  epoll_io_loop.h  io_uring_loop.h
include/rad/io/posix/: async_file_impl.h  iovecs_buffers.h  serial_port_impl.h  sync_waitable_timer.h  unnamed_pipe_impl.h
include/rad/io/windows/: async_file_impl.h  async_waitable_timer.h  console_impl.h  iocp.h  iocp_io_loop.h  serial_port_impl.h  sync_waitable_timer.h  unnamed_pipe_impl.h
include/rad/ipc/: async_pipe.h  pipe_endpoint.h
include/rad/json/: basic_parser.h  error.h  json.h  parser.h  serializer.h  value.h
include/rad/local/: endpoint.h  tcp.h  udp.h
include/rad/math/: matrix.h
include/rad/net/: async_resolver.h  async_socket.h  blocking_resolver.h  blocking_socket.h  socket_options.h  tcp.h  tcp_factories.h  types.h  udp.h
include/rad/net/detail/: async_resolver_impl.h  resolver_impl.h  socket_impl.h
include/rad/net/detail/posix/: async_resolver_impl.h  async_socket_impl.h  resolver_impl.h
include/rad/net/detail/windows/: async_resolver_impl.h  async_socket_impl.h  resolver_impl.h  socket_impl.h
include/rad/net/dns/: ares_resolver.h  dns_parser.h  doh_resolver.h
include/rad/net/http/: http_client.h  http_parser.h
include/rad/net/http2/: README.md  hpack.h  http2_client.h  http2_parser.h
include/rad/net/idna/: idna.h  punycode.h
include/rad/net/ssl/: blocking_stream.h  mbedtls_ctx.h  openssl_ctx.h  sslctx.h  stream.h  wolfssl_ctx.h
include/rad/net/url/: percent_encoding.h  url.h
include/rad/threading/: condition_variable.h  mutex.h  spinlock.h  synchronized_value.h  thread.h  thread_pool.h
include/rad/threading/detail/posix/: mutex.h
include/rad/threading/detail/windows/: mutex.h
include/rad/unittest/: unittest.h
include/rad/views/: dropwhile.h  enumerate.h  filter.h  imap.h  reversed.h  skip.h  slice.h  take.h  takewhile.h  to.h  views_base.h  zip.h
include/rad/windows/: clock.h  env.h  process.h  service.h  winreg.h  wts.h
src/: cli.cpp  no_ec_ref.cpp  ring_buffer_consumer_producer.cpp  strand.cpp  utf.cpp
src/channels/: channels_error.cpp
src/crypto/: aes.cpp  base64.cpp  error.cpp  gcm.cpp  wincrypt.cpp  windpapi.cpp
src/databases/: odbc.cpp  sqlite.cpp
src/io/: io_loop.cpp
src/io/bsd/: kqueue.cpp
src/io/linux/: epoll.cpp  io_uring_loop.cpp
src/io/posix/: async_file_impl.cpp  files.cpp  iovecs_buffers.cpp  reactor_io_loop.cpp  serial_port.cpp  unnamed_pipe.cpp
src/io/windows/: async_file_impl.cpp  console.cpp  files.cpp  iocp.cpp  iocp_io_loop.cpp  serial_port.cpp  unnamed_pipe.cpp
src/ipc/windows/: async_pipe.cpp
src/json/: json_error.cpp  json_parser.cpp  json_serializer.cpp  json_value.cpp
src/net/: compiletime_checks.h  types.cpp
src/net/dns/: ares_resolver.cpp  dns_parser.cpp  doh_resolver.cpp
src/net/http/: http_client.cpp  http_error.cpp  http_headers_fields.cpp  http_operations.cpp  http_parser.cpp  message_serialization.cpp
src/net/http2/: hpack.cpp  http2_client.cpp  http2_debug.h  http2_parser.cpp
src/net/idna/: idna.cpp  idna_disallowed_ranges.h  punycode.cpp
src/net/posix/: async_resolver.cpp  async_socket.cpp  resolver.cpp  socket.cpp
src/net/ssl/: mbedtls_impl.cpp  openssl_impl.cpp  wolfssl_impl.cpp
src/net/url/: percent_encoding.cpp  url.cpp  url_ip_parsing.cpp
src/net/windows/: async_resolver.cpp  async_socket.cpp
src/posix/: sysinfo.cpp
src/threading/: condition_variable.cpp  thread_pool.cpp
src/threading/posix/: thread.cpp
src/threading/windows/: condition_variable.cpp  thread.cpp
src/windows/: env.cpp  handle.cpp  os_info.cpp  process.cpp  service.cpp  sysinfo.cpp  system_error.cpp  user_env.cpp  winreg.cpp  wts.cpp
tests/: base64_tests.cpp  buffer_writer_reader-tests.cpp  channels_tests.cpp  cli_tests.cpp  console_tests.cpp  coro-asserts.cpp  coro_tests.cpp  crypto_tests.cpp  dns_resolvers_tests.cpp  executors_compile_tests.cpp  hpack_tests.cpp  http2_client_tests.cpp  http_binary_server.cpp  http_client_tests.cpp  http_parser_tests.cpp  http_tests_json_utils.h  json_tests.cpp  main.cpp  matrix-tests.cpp  net-tests.cpp  odbc-tests.cpp  percent_encoding_tests.cpp  pipe-test.cpp  punycode_tests.cpp  ring_buffer_tests.cpp  serial_port_tests.cpp  socket-compile-tests1.cpp  socket-compile-tests2.cpp  socket-tests.cpp  sockets-tests-old.cpp  sqlite-tests.cpp  ssl-test.cpp  stack_lists_tests.cpp  strand-tests.cpp  string_tests.cpp  trackable_tests.cpp  unnamed_pipes_tests.cpp  url_tests.cpp  urltestdata.json  user_settings.h  (+6 more)
